--- a/Manifest.in
+++ b/Manifest.in
@@ -1,3 +1,3 @@
 include README.md
 include LICENSE.txt
-recursive-include krysa *.*
+recursive-include krysa *.py *.sqlite *.png *.krysa *.txt *.rst *.css *.md *.kv
