--- a/.travis.yml
+++ b/.travis.yml
@@ -3,29 +3,65 @@ matrix:
   include:
     - language: python
       python: 2.7
+      env: RUN=pep8
       os: linux
       dist: trusty
     - language: python
       python: 3.5
+      env: RUN=pep8
+      os: linux
+      dist: trusty
+    - language: python
+      python: 2.7
+      env: RUN=docs
+      os: linux
+      dist: trusty
+    - language: python
+      python: 2.7
+      env: RUN=unit
+      os: linux
+      dist: trusty
+    - language: python
+      python: 3.5
+      env: RUN=unit
       os: linux
       dist: trusty
 
 before_install:
-  - sudo add-apt-repository ppa:zoogie/sdl2-snapshots -y
-  - sudo apt-get update;
-  - sudo apt-get -y install libsdl2-dev libsdl2-ttf-dev libsdl2-image-dev libsdl2-mixer-dev;
-  - sudo apt-get -y install python-dev libsmpeg-dev libswscale-dev libavformat-dev libavcodec-dev libjpeg-dev libtiff4-dev libX11-dev libmtdev-dev;
-  - sudo apt-get -y install python-setuptools build-essential libgl1-mesa-dev libgles2-mesa-dev;
-  - sudo apt-get -y install xvfb pulseaudio;
-  - export DISPLAY=:99.0;
-  - /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1280x720x24 -ac +extension GLX;
+  - if [ "${RUN}" != "pep8" ]; then
+        sudo add-apt-repository ppa:zoogie/sdl2-snapshots -y;
+        sudo apt-get update;
+        sudo apt-get -y install libsdl2-dev libsdl2-ttf-dev libsdl2-image-dev libsdl2-mixer-dev;
+        sudo apt-get -y install python-dev libsmpeg-dev libswscale-dev libavformat-dev libavcodec-dev libjpeg-dev libtiff4-dev libX11-dev libmtdev-dev;
+        sudo apt-get -y install python-setuptools build-essential libgl1-mesa-dev libgles2-mesa-dev;
+        sudo apt-get -y install xvfb pulseaudio;
+        export DISPLAY=:99.0;
+        /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1280x720x24 -ac +extension GLX;
+    fi;
+
 install:
-  - python -m pip install --upgrade pip
-  - pip install kivyunittest
-  - pip install Cython>=0.23
-  - pip install http://github.com/kivy/kivy/zipball/master --verbose -I
-  - pip install -r docs/docs-requirements.txt
-  - pip install .
+  - set -v
+  - if [ "${RUN}" != "pep8" ]; then
+        python -m pip install --upgrade pip;
+        pip install kivyunittest;
+        pip install Cython>=0.23;
+        pip install http://github.com/kivy/kivy/zipball/master --verbose -I;
+        if [ "${RUN}" == "docs" ]; then
+            pip install -r docs/docs-requirements.txt;
+        fi;
+    else
+        pip install --upgrade pep8;
+    fi;
+
 script:
-  - python -m kivyunittest --folder "krysa/tests"
-  - cd docs && make html
+  - if [ "${RUN}" == "pep8" ]; then
+        python -m pep8;
+    fi;
+  - if [ "${RUN}" == "unit" ]; then
+        pip install .;
+        python -m kivyunittest --folder "krysa/tests";
+    fi;
+  - if [ "${RUN}" == "docs" ]; then
+        pip install .;
+        cd docs && make html;
+    fi;
